<?xml version="1.0" encoding="utf-8"?>

<!--Layout structure obtained from open source project: https://sendbird.com/developer/tutorials/android-chat-tutorial-building-a-messaging-ui-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header_toolbar"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/input_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="401dp"
        android:layout_height="651dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/company_email_input_text"
            android:layout_width="197dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="95dp"
            android:layout_marginEnd="250dp"
            android:layout_marginBottom="16dp"
            android:text="@string/enter_company_email"
            android:translationX="5sp" />

        <EditText
            android:id="@+id/company_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            android:hint="@string/company_email"
            android:inputType="textEmailAddress"
            android:maxLines="6"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/password_input_text"
            android:layout_width="159dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="46dp"
            android:layout_marginEnd="265dp"
            android:layout_marginBottom="11dp"
            android:text="@string/enter_password"
            android:translationX="20sp" />

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="6"
            android:minHeight="48dp"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/create_account_link"
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="125sp"
            android:layout_marginTop="30sp"
            android:layout_marginEnd="150sp"
            android:clickable="true"
            android:focusable="true"
            android:minHeight="20sp"
            android:padding="15sp"
            android:text="@string/create_account_link"
            android:textColor="#03A9F4"
            android:textColorLink="#03A9F4" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="66dp"
            android:layout_marginStart="150dp"
            android:layout_marginTop="-20sp"
            android:layout_marginEnd="150dp"
            android:layout_marginBottom="0sp"
            android:text="@string/login"
            android:translationY="20sp" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_error"
            android:textColor="#FF0000"
            android:translationX="15sp"
            android:translationY="30sp"
            android:visibility="invisible" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>